--- a/css/site.css
+++ b/css/site.css
@@ -1,3 +1,8 @@
+body {background-color:#f1f1f1;
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+
 #sections {
     width:80vw;
     margin:20px auto;
@@ -10,3 +15,26 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+/* Content */
+.sideAccent {
+    background: #724497;
+    font-family: 'Source Sans Pro', sans-serif;
+    width: 15px;
+  }
+  .imageContainer img {
+    width: 100%;
+  }
+  .imageContainer {
+    padding: 50px;
+  }
+  .valueProp {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-family: 'Source Sans Pro', sans-serif;
+  }
+
+.mynav {
+      background-color:#724497 !important;
+      color:#fff;
+  }
